--- a/pages/dubSingle/dubSingle.wxml
+++ b/pages/dubSingle/dubSingle.wxml
@@ -39,4 +39,12 @@
         </view>
     </view>
     <!-- 底部开关按钮 -->
+    <view class='switch'>
+        <!-- 圆形按钮 -->
+        <view class='button' bindtap=''></view>
+        <!-- 逐句配音 -->
+        <text class='sentence' style='opacity: {{sOpacity}}'>逐句</text>
+        <!-- 逐段配音 -->
+        <text class='paragraph' style='display: {{pOpacity}}'>逐段</text>
+    </view>
 </view>
