--- a/pages/dubSingle/dubSingle.wxss
+++ b/pages/dubSingle/dubSingle.wxss
@@ -26,13 +26,15 @@ video {
     align-items: center;
     margin-top: 30rpx;
     line-height: 50rpx;
+    border: 1rpx solid #c0c0c0;
 }
 
 /* paragraph */
 
 .paragraph {
+     margin-top: 30rpx;
     width: 700rpx;
-    height: 500rpx;
+    border: 1rpx solid #c0c0c0;
     overflow: scroll;
 }
 
@@ -63,15 +65,15 @@ button {
 /* 底部开关按钮 */
 
 .switch {
-    width: 120rpx;
+    width: 130rpx;
     height: 60rpx;
     position: absolute;
     left: 560rpx;
     bottom: 20rpx;
     border-radius: 40rpx;
     margin: 40rpx;
-    font-size: 30rpx;
-    line-height: 60rpx;
+    font-size: 29rpx;
+    line-height: 58rpx;
     background: rgb(69, 204, 245);
 }
 
@@ -89,6 +91,11 @@ button {
 
 /* sentence，paragraph */
 
-.sentence, .paragraph {
+.sen, .par {
     transition: 0.1s;
+    color: #b67c7c;
+}
+
+.sen {
+    margin-left: 10rpx;
 }
