--- a/pages/preview/preview.wxml
+++ b/pages/preview/preview.wxml
@@ -4,7 +4,7 @@
     <!-- 说点什么 -->
     <view class='my-words'>
         <view class='label'>说点什么</view>
-        <input type='text'></input>
+        <input type='text' class='input-text'></input>
     </view>
     <!-- 其他推荐 -->
     <view class='others'>
@@ -35,5 +35,10 @@
                 </view>
             </view>
         </view>
+    </view>
+    <!-- 底部按钮 -->
+    <view class='btn-area'>
+        <button class='save' bindtap='save'>保存</button>
+        <button class='release' bindtap='release'>发布</button>
     </view>
 </view>
